--- a/style.css
+++ b/style.css
@@ -182,3 +182,80 @@ li span {
     font-style: normal;
 
 }
+
+
+
+label{
+    font-family: "Poppins", sans-serif;
+    margin-bottom: 80px;
+}
+
+input{
+    
+
+    padding-left: 0px;
+    padding-top: 5px;
+    padding-bottom: 2px;
+    padding-right: 35px;
+
+    font-size: 18px;
+    border-radius: 3px;
+    margin-bottom: 8px;
+}
+
+
+textarea{
+    font-size: 18px;
+    font-size: 18px;
+    width:252px;
+    height: 100px;
+    margin-bottom: 8px;
+
+}
+
+button{
+    cursor: pointer;
+    background-color: rgb(3, 4, 94);
+    color: white;
+    font-size: 25px;
+    font-family: "Poppins", sans-serif;
+    border-radius: 8px;
+    padding-left: 8px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 8px;
+    text-align: center;
+
+
+}
+
+#form{
+    margin: auto;
+    align-items: center;
+    border-radius: 8px;
+    
+}
+
+.footer-main {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+.discussion {
+    width: 45%;
+    text-align: left;
+    font-family: "Poppins", sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+    
+}
+
+#h11{
+    font-family: "Bungee Shade", sans-serif;
+    font-weight: bold;
+}
+
+
+
+
+
