--- a/style.css
+++ b/style.css
@@ -1,15 +1,24 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #F7F197;
-    color: #03045E;
+    background-color: black;
+    color: white;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
 
+header {
+    position: sticky;
+    top: 0;
+}
+
+
 nav {
 
+    position: sticky;
+    top: 0;
+    z-index: 1000;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-style: normal;
@@ -21,7 +30,9 @@ nav {
     max-width: 95vw;
     margin: auto;
     gap: 150px;
-    padding-bottom: 70px;
+    /* padding-bottom: 70px; */
+    background-color: black;
+
 }
 
 nav h5 {
@@ -35,11 +46,46 @@ nav ul {
 
 }
 
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
+    position: relative;
+    /* Required for positioning the pseudo-element */
+    padding-bottom: 5px;
+    /* Space for the underline */
+}
+
+nav ul li a::after {
+    content: '';
+    display: block;
+    height: 2px;
+    width: 0;
+    /* Initially hidden */
+    background: white;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: width 0.3s ease;
+    /* Smooth transition */
+}
+
+nav ul li:hover a::after {
+    width: 100%;
+    /* Full width on hover */
+}
+
+a:visited {
+    color: none;
+}
+
 
 .main-sec-1-sub {
     display: flex;
     flex-direction: column;
     margin: 10px;
+    padding-top: 70px;
+
 }
 
 .main-sec-1-sub span:nth-child(1) {
@@ -88,13 +134,15 @@ nav ul {
     margin: auto;
     justify-content: space-between;
     align-items: center;
+    padding-bottom: 90px;
+    padding-top: 40px;
 }
 
 .main-sec-1 img {
     width: 530px;
 }
 
-#main1 {
+.main1 {
     padding-top: 80px;
     font-size: 72px;
     font-family: "Bungee Shade", sans-serif;
@@ -107,18 +155,20 @@ nav ul {
     font-size: 25px;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
-    font-style: normal;
-    max-width: 60vw;
+    font-style: italic;
+    max-width: 75vw;
     /* margin: auto; */
     padding-top: 20px;
     padding-bottom: 50px;
     padding-left: 200px;
 }
 
+
+
 .list-progress {
     font-family: "Poppins", sans-serif;
     font-weight: normal;
-    font-style: normal;
+    font-style: italic;
     font-size: 25px;
     max-width: 65vw;
     margin: auto;
@@ -169,13 +219,13 @@ li span {
     width: 150px;
     border-radius: 8px;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-    background-color: rgb(3, 4, 94);
-    color: white;
+    background-color: white;
+    color: black;
 
 
 }
 
-#p{
+#p {
     padding-top: 10px;
     font-family: "Poppins", sans-serif;
     font-weight: normal;
@@ -183,79 +233,107 @@ li span {
 
 }
 
-
-
-label{
-    font-family: "Poppins", sans-serif;
-    margin-bottom: 80px;
+.works{
+    padding-top: 25px;
+    padding-bottom: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100vw;
+    margin: auto;
 }
 
-input{
-    
-
-    padding-left: 0px;
-    padding-top: 5px;
-    padding-bottom: 2px;
-    padding-right: 35px;
-
-    font-size: 18px;
-    border-radius: 3px;
-    margin-bottom: 8px;
-}
-
-
-textarea{
-    font-size: 18px;
-    font-size: 18px;
-    width:252px;
-    height: 100px;
-    margin-bottom: 8px;
-
-}
-
-button{
-    cursor: pointer;
-    background-color: rgb(3, 4, 94);
+.works a{
+    text-decoration: none;
     color: white;
+    font-family: "Poppins", sans-serif;
+    font-style: none;
+}
+
+.works img {
+
+    width: 200px;
+    
+}
+
+footer {
+    padding-top: 40px;
+}
+
+.footer-main {
+    font-size: 15px;
+    padding: 40px;
+    max-width: 60vw;
+    margin: auto;
+    border: 2px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+}
+
+label {
+    font-family: "Poppins", sans-serif;
+
+    font-size: 20px;
+
+
+}
+
+input {
+
+
+    padding-left: 5px;
+    padding-top: 14px;
+    padding-bottom: 12px;
+    padding-right: 165px;
+
+    font-size: 18px;
+    border-radius: 4px;
+    margin-bottom: 16px;
+    border: none;
+    font-family: "Poppins", sans-serif;
+}
+
+::placeholder {
+    font-size: 15px;
+}
+
+
+textarea {
+    font-size: 18px;
+    font-size: 18px;
+    width: 385px;
+    height: 120px;
+    margin-bottom: 8px;
+    border-radius: 4px;
+    font-family: "Poppins", sans-serif;
+
+}
+
+button {
+    cursor: pointer;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-size: 25px;
     font-family: "Poppins", sans-serif;
     border-radius: 8px;
     padding-left: 8px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 8px;
+    padding-bottom: 8px;
     padding-right: 8px;
     text-align: center;
-
+    border: none;
+    margin-left: 130px;
 
 }
 
-#form{
-    margin: auto;
-    align-items: center;
-    border-radius: 8px;
-    
-}
-
-.footer-main {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-.discussion {
-    width: 45%;
-    text-align: left;
-    font-family: "Poppins", sans-serif;
-    font-size: 25px;
-    font-weight: bold;
-    
-}
-
-#h11{
-    font-family: "Bungee Shade", sans-serif;
-    font-weight: bold;
+button:hover {
+    background-color: rgba(255, 255, 255, 0.899);
 }
 
 
 
-
-
+nav div span {
+    padding-left: 10px;
+}
